--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!DOCTYPE html><html><head><title>FullHousey Admin</title></head><body><div id='root'></div><script type='module' src='/src/main.tsx'></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FullHousey | Private Access</title>
+    <style>
+      body {
+        margin: 0;
+        background: #0e0e0e;
+        color: #fff;
+        font-family: 'Segoe UI', sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        flex-direction: column;
+      }
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 0.5em;
+      }
+      p {
+        font-size: 1.1rem;
+        opacity: 0.7;
+        max-width: 480px;
+        text-align: center;
+      }
+      .logo {
+        width: 120px;
+        margin-bottom: 1.5em;
+      }
+    </style>
+  </head>
+  <body>
+    <img class="logo" src="/fullhousey-logo.svg" alt="FullHousey Logo" />
+    <h1>FullHousey Admin is Under Wraps</h1>
+    <p>This site is currently locked while we prepare for launch. If you're part of the dev team, please use your secure login tunnel.</p>
+  </body>
+</html>
