--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
   <title>FullHousey Admin</title>
 </head>
 <body>
+<script>
+  window.HEYGEN_API_KEY = 'ZTkwMzRmZjAwNTU5NGRhNmJkYjdhM2FkMzNhOTkwZWQtMTc1MzUyMjYwMg==';
+</script>
   <div id="root"></div>
 </body>
 </html>
