--- a/index.html
+++ b/index.html
@@ -5,9 +5,68 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FullHousey Admin</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: sans-serif;
+        background-color: black;
+        color: white;
+      }
+
+      .login-screen {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        gap: 1rem;
+      }
+
+      .hidden {
+        display: none;
+      }
+
+      input[type="password"] {
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        width: 200px;
+      }
+
+      button {
+        padding: 10px 20px;
+        border: none;
+        background: white;
+        color: black;
+        font-weight: bold;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="login" class="login-screen">
+      <h2>Enter Admin Pass</h2>
+      <input type="password" id="password" placeholder="Enter Password" />
+      <button onclick="checkPassword()">Login</button>
+    </div>
+
+    <div id="app" class="hidden">
+      <!-- Vite will inject your app here -->
+      <script type="module" src="/src/main.tsx"></script>
+    </div>
+
+    <script>
+      function checkPassword() {
+        const input = document.getElementById("password").value;
+        const correct = "fullhousey123"; // replace with your secure value
+        if (input === correct) {
+          document.getElementById("login").classList.add("hidden");
+          document.getElementById("app").classList.remove("hidden");
+        } else {
+          alert("Wrong password");
+        }
+      }
+    </script>
   </body>
 </html>
